welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:5: error: not found: value setpos
	setpos(0,0);ecritMessage(y);y = y + 1;
        ^